--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -4,7 +4,8 @@ loaders:
 processors:
   - type: filter
     skip_empty_modules: true
-  - type: smart
+  - type: google
+    # - type: smart
   - type: crossref
 renderer:
   type: docusaurus
