--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
+    "@cmfcmf/docusaurus-search-local": "^0.6.7",
     "@docusaurus/core": "2.0.0-beta.9",
     "@docusaurus/mdx-loader": "^2.0.0-beta.9",
     "@docusaurus/plugin-ideal-image": "^2.0.0-beta.9",
