--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -21,5 +21,6 @@ jobs:
       - name: Test build
         working-directory: website
         run: |
+          npm install
           npm ci
           npm run build
