--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
           publish_dir: ./website/build
           # Assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch:
