fix chokidar error that may be related to node version

--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "optionalDependencies": 
+    { 
+      "fsevents": "2.1.2"
+    }
 }
