--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@docusaurus/core": "2.0.0-beta.20",
     "@docusaurus/mdx-loader": "^2.0.0-beta.20",
     "@docusaurus/plugin-google-gtag": "^2.0.0-beta.20",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.20",
     "@docusaurus/plugin-ideal-image": "^2.0.0-beta.20",
     "@docusaurus/preset-classic": "2.0.0-beta.20",
     "@easyops-cn/docusaurus-search-local": "^0.23.2",
