--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - run: pip install pydoc-markdown
       - uses: actions/checkout@v2
         with:
           path: docs
@@ -22,6 +26,7 @@ jobs:
       - name: Go to Docs directory
         run: |
           cd docs
+          pydoc-markdown
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
