Need to specify working dir each step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,10 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
+          cache-dependency-path: docs/package-lock.json
       - name: Build website
         run: |
+          cd docs
           npm ci
           npm run build
 
