--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -31,7 +31,9 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
+          cache-dependency-path: docs/package-lock.json
       - name: Test build
         run: |
+          cd docs
           npm ci
           npm run build
