Add FormFyxer code reference docs to doc site
In the same way that we do for AssemblyLine code

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           repository: SuffolkLITLab/docassemble-AssemblyLine
           path: docassemble-AssemblyLine
+      - uses: actions/checkout@v2
+        with:
+          repository: SuffolkLITLab/docassemble-AssemblyLine
+          path: FormFyxer
       - name: Go to Docs directory
         run: |
           cd docs
