--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -1,6 +1,6 @@
 loaders:
   - type: python
-    search_path: [../docassemble-AssemblyLine/docassemble/AssemblyLine]
+    search_path: [../docassemble-AssemblyLine/docassemble/AssemblyLine, ../FormFyxer]
 processors:
   - type: filter
     skip_empty_modules: true
