--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -27,6 +27,10 @@ jobs:
         with:
           repository: SuffolkLITLab/docassemble-AssemblyLine
           path: FormFyxer
+      - uses: actions/checkout@v2
+        with:
+          repository: SuffolkLITLab/docassemble-ALToolbox
+          path: docassemble-ALToolbox
       - name: Go to Docs directory
         run: |
           cd docs
