--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -1,7 +1,7 @@
 loaders:
   - type: python
     search_path:
-      - "../docassemble-AssemblyLine/docassemble/AssemblyLine"
+      - "../docassemble-AssemblyLine/docassemble/"
       - "../FormFyxer"
       - "../docassemble-ALToolbox/docassemble/"
       - "../docassemble-EFSPIntegration/docassemble"
@@ -16,4 +16,4 @@ renderer:
   docs_base_path: docs
   relative_output_path: reference
   relative_sidebar_path: sidebar.json
-  sidebar_top_level_label: "API Reference"
+  sidebar_top_level_label: API Reference
