--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - run: pip install pydoc-markdown
+      - run: pip install docspec_python==2.0.2 pydoc-markdown==4.6.4
       - uses: actions/checkout@v2
         with:
           path: docs
