--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - run: pip install docspec_python==2.2.1 git+https://github.com/nonprofittechy/pydoc-markdown
+      - run: pip install docspec_python==2.2.1 git+https://github.com/nonprofittechy/pydoc-markdown@develop
       - uses: actions/checkout@v3
         with:
           path: docs
