--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -14,9 +14,9 @@ processors:
 renderer:
   type: docusaurus
   docs_base_path: docs
-  relative_output_path: reference
+  relative_output_path: components
   relative_sidebar_path: sidebar.json
-  sidebar_top_level_label: API Reference
+  sidebar_top_level_label: null
   markdown:
     escape_html_in_docstring: true
     escape_curly_braces_in_docstring: true
