--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - run: pip install databind.core>=4.2.6 databind.json>=4.2.6 docspec_python==2.2.1 git+https://github.com/nonprofittechy/pydoc-markdown@escape-brackets
+      - run: pip install docspec_python==2.2.1 git+https://github.com/nonprofittechy/pydoc-markdown@escape-brackets
       - uses: actions/checkout@v3
         with:
           path: docs
