--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -44,3 +44,4 @@ renderer:
     
     # Better anchor insertion
     insert_header_anchors: true
+    render_module_header_template: "pydoc-module-header.hbs"
