Worked through several quirky nuances; now in good shape as an improved auto code layout

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           cd docs
           pydoc-markdown
+          ./fix-doc-titles.sh
       - uses: actions/setup-node@v3
         with:
           node-version: 20
